<resources>
    <string name="app_name">DnD Player Companion</string>
    <string name="title_home">Home</string>
    <string name="title_character">Character</string>
    <string name="title_add_character">Add Character</string>
    <string name="title_notifications">Notifications</string>
    <string name="level">Lvl %1$d</string>
    <string name="save">Save</string>
    <string name="hp">%1$d / %2$d</string>
    <string name="hit_die">%1$d x d%2$d</string>
    <string name="character_page_title">%1$s - Level %2$d %3$s</string>

    <string-array name="proficiency_spinner">
        <item>Not Proficient</item>
        <item>Proficient</item>
        <item>Half proficient</item>
        <item>Expertise</item>
    </string-array>
    <string-array name="proficiency_spinner_short">
        <item>N</item>
        <item>P</item>
        <item>H</item>
        <item>E</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ability_scores">Ability Scores</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="int_short">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="score_default">10</string>
    <string name="saving_throw_proficiencies">Saving Throw Proficiencies</string>
    <string name="skills">Skills</string>
    <string name="acrobatics">Acrobatics</string>
    <string name="animal_handling">Animal Handling</string>
    <string name="arcana">Arcana</string>
    <string name="athletics">Athletics</string>
    <string name="deception">Deception</string>
    <string name="history">History</string>
    <string name="insight">Insight</string>
    <string name="intimidation">Intimidation</string>
    <string name="investigation">Investigation</string>
    <string name="medicine">Medicine</string>
    <string name="nature">Nature</string>
    <string name="perception">Perception</string>
    <string name="performance">Performance</string>
    <string name="persuasion">Persuasion</string>
    <string name="religion">Religion</string>
    <string name="sleight_of_hand">Sleight of Hand</string>
    <string name="stealth">Stealth</string>
    <string name="survival">Survival</string>
    <string name="title_dice">Dice</string>
    <string name="edit_character_menu_item">Edit character</string>
    <string name="roll_button">Roll</string>
    <string name="default_dice_value">0</string>
    <string name="reset_button">Reset</string>
    <string name="modifier">Modifier</string>
</resources>
