<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.colobus.dndplayercompanion.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_character"
        android:name="com.colobus.dndplayercompanion.ui.character.CharactersFragment"
        android:label="@string/title_character"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/navigation_add_character"
        android:name="com.colobus.dndplayercompanion.ui.character.AddCharacterFragment"
        android:label="@string/title_add_character"
        tools:layout="@layout/fragment_add_character" />

    <fragment
        android:id="@+id/navigation_dice"
        android:name="com.colobus.dndplayercompanion.ui.notifications.NotificationsFragment"
        android:label="@string/title_dice"
        tools:layout="@layout/fragment_notifications" />
</navigation>
