<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.dice.DiceFragment">

        <androidx.cardview.widget.CardView
            style="@style/CharacterCardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/d20_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d20" />

                <TextView
                    android:id="@+id/d20_value"
                    style="@style/CharacterCardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/d20_lbl"
                    android:text="@string/default_dice_value" />

                <Button
                    android:id="@+id/d20_roll_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/roll_button"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CharacterCardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/d2_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d2" />

                <TextView
                    android:id="@+id/d2_value"
                    style="@style/CharacterCardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/d2_lbl"
                    android:text="@string/default_dice_value" />

                <Button
                    android:id="@+id/d2_roll_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/roll_button"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/CharacterCardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/d4_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d4" />

                <TextView
                    android:id="@+id/d4_value"
                    style="@style/CharacterCardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/d4_lbl"
                    android:text="@string/default_dice_value" />

                <Button
                    android:id="@+id/d4_roll_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/roll_button"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/CharacterCardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/d6_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d6" />

                <TextView
                    android:id="@+id/d6_value"
                    style="@style/CharacterCardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/d6_lbl"
                    android:text="@string/default_dice_value" />

                <Button
                    android:id="@+id/d6_roll_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/roll_button"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/CharacterCardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/d8_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d8" />

                <TextView
                    android:id="@+id/d8_value"
                    style="@style/CharacterCardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/d8_lbl"
                    android:text="@string/default_dice_value" />

                <Button
                    android:id="@+id/d8_roll_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/roll_button"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/CharacterCardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/d10_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d10" />

                <TextView
                    android:id="@+id/d10_value"
                    style="@style/CharacterCardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/d10_lbl"
                    android:text="@string/default_dice_value" />

                <Button
                    android:id="@+id/d10_roll_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/roll_button"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/CharacterCardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/d12_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d12" />

                <TextView
                    android:id="@+id/d12_value"
                    style="@style/CharacterCardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/d12_lbl"
                    android:text="@string/default_dice_value" />

                <Button
                    android:id="@+id/d12_roll_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/roll_button"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            style="@style/CharacterCardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/d100_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="d100" />

                <TextView
                    android:id="@+id/d100_value"
                    style="@style/CharacterCardValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/d100_lbl"
                    android:text="@string/default_dice_value" />

                <Button
                    android:id="@+id/d100_roll_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/roll_button"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/reset_dice_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>